# Fidelity

./: .gitignore  .gitmodules  Buttons.cpp  Buttons.hpp  CMAKE_MODERNIZATION.md  CMakeLists.txt  README.md  build-windows.ps1  sdl2-config.cmake
Engine/: Types.h
Source/CullingTest/: CMakeLists.txt  CullingTest.cpp  CullingTest.h  main.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Components/: Component.h  Light.cpp  Model.cpp  Model.hpp  PointLight.cpp  PointLight.h  Transform.cpp  Transform.h
Source/Engine/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentBuilder.hpp  Drawable.cpp  Drawable.h  Fidelity.h  GameObject.cpp  GameObject.h  GameObjectBuilder.cpp  GameObjectBuilder.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Material.cpp  Material.h  Maths.h  Octree.cpp  Octree.h  OctreeNode.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  StaticMesh.cpp  StaticMesh.h  System.hpp  Transform.cpp  Transform.h  Types.hpp
Source/Engine/Diagnostics/: Logger.h
Source/Engine/Geometry/: Cube.cpp  Cube.hpp  Geometry.cpp  Geometry.hpp  Icosphere.cpp  Icosphere.hpp  MeshFactory.cpp  MeshFactory.h  UvSphere.cpp  UvSphere.hpp
Source/Engine/Image/: ImageData.cpp  ImageData.hpp  ImageFormat.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageVolume.hpp
Source/Engine/Input/: Axes.hpp  Buttons.cpp  Buttons.hpp  EventDispatcher.cpp  EventDispatcher.hpp  InputBindings.cpp  InputBindings.hpp  InputHandler.cpp  InputHandler.hpp  Keys.cpp  Keys.hpp
Source/Engine/Maths/: AABB.cpp  AABB.hpp  Colour.cpp  Colour.hpp  Degree.cpp  Degree.hpp  Frustrum.cpp  Frustrum.hpp  Math.cpp  Math.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Plane.cpp  Plane.hpp  Quaternion.cpp  Quaternion.hpp  Radian.cpp  Radian.hpp  Ray.cpp  Ray.hpp  Rectangle2I.cpp  Rectangle2I.hpp  Vector2.cpp  Vector2.hpp  Vector2I.cpp  Vector2I.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
Source/Engine/Overlay/: Font.hpp  GuiCaption.cpp  GuiCaption.hpp  GuiCheckBox.cpp  GuiCheckBox.hpp  GuiElement.cpp  GuiElement.hpp  GuiPanel.cpp  GuiPanel.hpp  GuiSystem.cpp  GuiSystem.hpp  ScreenElement.hpp  TextOverlay.cpp  TextOverlay.hpp  UIManager.cpp  UIManager.h
Source/Engine/RenderApi/: BlendState.hpp  DepthStencilState.hpp  GL.cpp  GL.hpp  GLGpuBuffer.cpp  GLGpuBuffer.hpp  GLShader.cpp  GLShader.hpp  GpuBuffer.hpp  IndexBuffer.hpp  PipelineState.hpp  PipelineStateObject.hpp  PixelFormat.hpp  RasterizerState.hpp  RenderDevice.hpp  RenderTarget.hpp  SamplerState.hpp  Shader.cpp  Shader.hpp  ShaderParams.cpp  ShaderParams.hpp  Texture.hpp  VertexBuffer.hpp  VertexLayout.hpp
Source/Engine/RenderApi/GL/: GL.cpp  GL.hpp  GLGpuBuffer.cpp  GLGpuBuffer.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLProgramPipelineCollection.hpp  GLRenderDevice.cpp  GLRenderDevice.hpp  GLRenderTarget.cpp  GLRenderTarget.hpp  GLSamplerState.cpp  GLSamplerState.hpp  GLShader.cpp  GLShader.hpp  GLShaderPipeline.cpp  GLShaderPipeline.hpp  GLShaderPipelineCollection.cpp  GLShaderPipelineCollection.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexArrayCollection.cpp  GLVertexArrayCollection.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp
Source/Engine/Rendering/: Camera.cpp  Camera.h  CameraBuilder.cpp  CameraBuilder.hpp  ConstantBuffer.cpp  ConstantBuffer.h  CubeMap.cpp  CubeMap.h  DebugRenderer.cpp  DebugRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  Drawable.cpp  Drawable.h  DrawableBuilder.cpp  DrawableBuilder.hpp  FrameBuffer.cpp  FrameBuffer.h  FrameGraphNode.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Light.cpp  Light.h  LightBuilder.cpp  LightBuilder.hpp  Material.cpp  Material.h  Material.hpp  MaterialFactory.cpp  MaterialFactory.hpp  MeshFactory.cpp  MeshFactory.h  OpenGL.cpp  OpenGL.h  RenderApi.cpp  RenderApi.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderQueue.cpp  RenderQueue.hpp  (+25 more)
Source/Engine/SceneManagement/: Actor.cpp  Actor.hpp  ActorNode.cpp  ActorNode.hpp  Camera.cpp  Camera.hpp  CameraNode.cpp  CameraNode.hpp  Component.hpp  ComponentRouter.cpp  ComponentRouter.hpp  FpsCamera.cpp  FpsCamera.hpp  GenericNode.hpp  ISceneNode.hpp  Light.h  LightNode.cpp  LightNode.hpp  OrbitalCamera.cpp  OrbitalCamera.h  OrbitalCamera.hpp  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNode.hpp  SceneNodeFactory.cpp  SceneNodeFactory.hpp  SkyBox.cpp  SkyBox.hpp  Transform.cpp  Transform.h  WorldObject.cpp  WorldObject.h
Source/Engine/Shaders/: DeferredGeometryPass.shader  DeferredLightingPass.shader  DirDepthPassShader.cpp  DirDepthPassShader.hpp  DirLightColourPass.shader  DirLightDepthPass.shader  DirLighting.shader  DirLightingPassShader.cpp  DirLightingPassShader.hpp  DirectionalLight.shader  DirectionalLightDepthShader.cpp  DirectionalLightDepthShader.hpp  GBuffer.shader  GeometryPassShader.cpp  GeometryPassShader.hpp  Gui.glsl  GuiPanel.shader  GuiPanelShader.cpp  GuiPanelShader.hpp  LightingPassShader.cpp  LightingPassShader.hpp  NormalMapping.glsl  SkyBox.glsl  SkyBox.shader  SkyBoxShader.cpp  SkyBoxShader.hpp  Standard.shader  TextOverlay.shader  TextOverlayShader.cpp  TextOverlayShader.hpp  Textured.glsl
Source/Engine/UI/: Panel.cpp  Panel.h  UiInspector.cpp  UiInspector.hpp  UiManager.cpp  UiManager.hpp
Source/Engine/Utility/: Assert.cpp  Assert.hpp  AssetManager.cpp  AssetManager.h  DebugUi.cpp  DebugUi.hpp  FntLoader.cpp  FntLoader.hpp  Hash.hpp  MeshFactory.cpp  MeshFactory.h  ModelLoader.cpp  ModelLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  String.cpp  String.hpp  StringUtil.cpp  StringUtil.h  TextureLoader.cpp  TextureLoader.hpp
Source/Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h  main.cpp
Source/Sponza/: CMakeLists.txt  Sponza.cpp  Sponza.h  main.cpp
Source/Test3D/: CMakeLists.txt  Test3D.cpp  Test3D.h  main.cpp
Source/Tests/: AabbTest.cpp  CMakeLists.txt  DegreeTest.cpp  FrustrumTest.cpp  MathTest.cpp  Matrix3Test.cpp  Matrix4Test.cpp  PlaneTest.cpp  QuaternionTest.cpp  RadianTest.cpp  RayTest.cpp  RenderCommandTest.cpp  TransformTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
(+137 files in other folders)
